// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component PublicationForm should render component initialised with just one field - publication type 1`] = `
<form
  onSubmit={[Function]}
>
  <NavigationDialogBox
    txt={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to abandon workflow?",
        "confirmationTitle": "Abandon workflow",
      }
    }
  />
  <StandardCard
    className=""
    title="Publication type"
  >
    <Field
      className="requiredField"
      component={[Function]}
      disabled={false}
      floatingLabelFixed={true}
      floatingLabelText="Publication type"
      hintText="Select a publication type from the dropdown list"
      name="rek_display_type"
    >
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_0"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_1"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_2"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_3"
        primaryText="Journal Article"
        value={179}
      />
      <Divider
        inset={false}
        key="div_0"
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="0"
        primaryText="Audio Document"
        value={263}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="1"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="2"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="3"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="4"
        primaryText="Conference Proceedings"
        value={197}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="5"
        primaryText="Creative Work"
        value={313}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="6"
        primaryText="Department Technical Report"
        value={181}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="7"
        primaryText="Design"
        value={316}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="8"
        primaryText="Generic Document"
        value={202}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="9"
        primaryText="Image"
        value={238}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="10"
        primaryText="Journal Article"
        value={179}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="11"
        primaryText="Newspaper Article"
        value={191}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="12"
        primaryText="Patent"
        value={185}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="13"
        primaryText="Preprint"
        value={204}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="14"
        primaryText="Research Report"
        value={275}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="15"
        primaryText="Seminar Paper"
        value={189}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="16"
        primaryText="Thesis"
        value={187}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="17"
        primaryText="Video Document"
        value={310}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="18"
        primaryText="Working Paper"
        value={183}
      />
    </Field>
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Abandon and search again"
        onTouchTap={[MockFunction]}
        primary={false}
        secondary={false}
      />
    </div>
  </div>
</form>
`;

exports[`Component PublicationForm should render component with BookForm 1`] = `
<form
  onSubmit={[Function]}
>
  <NavigationDialogBox
    txt={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to abandon workflow?",
        "confirmationTitle": "Abandon workflow",
      }
    }
  />
  <StandardCard
    className=""
    title="Publication type"
  >
    <Field
      className="requiredField"
      component={[Function]}
      disabled={false}
      floatingLabelFixed={true}
      floatingLabelText="Publication type"
      hintText="Select a publication type from the dropdown list"
      name="rek_display_type"
    >
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_0"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_1"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_2"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_3"
        primaryText="Journal Article"
        value={179}
      />
      <Divider
        inset={false}
        key="div_0"
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="0"
        primaryText="Audio Document"
        value={263}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="1"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="2"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="3"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="4"
        primaryText="Conference Proceedings"
        value={197}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="5"
        primaryText="Creative Work"
        value={313}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="6"
        primaryText="Department Technical Report"
        value={181}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="7"
        primaryText="Design"
        value={316}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="8"
        primaryText="Generic Document"
        value={202}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="9"
        primaryText="Image"
        value={238}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="10"
        primaryText="Journal Article"
        value={179}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="11"
        primaryText="Newspaper Article"
        value={191}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="12"
        primaryText="Patent"
        value={185}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="13"
        primaryText="Preprint"
        value={204}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="14"
        primaryText="Research Report"
        value={275}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="15"
        primaryText="Seminar Paper"
        value={189}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="16"
        primaryText="Thesis"
        value={187}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="17"
        primaryText="Video Document"
        value={310}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="18"
        primaryText="Working Paper"
        value={183}
      />
    </Field>
  </StandardCard>
  <BookForm
    formValues={
      Immutable.Map {
        "rek_display_type": 174,
      }
    }
    submitting={false}
    subtypeVocabId={453581}
  />
  <StandardCard
    className=""
    title="Upload files"
  >
    <Field
      component={[Function]}
      disabled={false}
      name="files"
      requireOpenAccessStatus={true}
      validate={
        Array [
          [Function],
        ]
      }
    />
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Abandon and search again"
        onTouchTap={[MockFunction]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Submit for approval"
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</form>
`;

exports[`Component PublicationForm should render component with GenericDocument 1`] = `
<form
  onSubmit={[Function]}
>
  <NavigationDialogBox
    txt={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to abandon workflow?",
        "confirmationTitle": "Abandon workflow",
      }
    }
  />
  <StandardCard
    className=""
    title="Publication type"
  >
    <Field
      className="requiredField"
      component={[Function]}
      disabled={false}
      floatingLabelFixed={true}
      floatingLabelText="Publication type"
      hintText="Select a publication type from the dropdown list"
      name="rek_display_type"
    >
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_0"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_1"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_2"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_3"
        primaryText="Journal Article"
        value={179}
      />
      <Divider
        inset={false}
        key="div_0"
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="0"
        primaryText="Audio Document"
        value={263}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="1"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="2"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="3"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="4"
        primaryText="Conference Proceedings"
        value={197}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="5"
        primaryText="Creative Work"
        value={313}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="6"
        primaryText="Department Technical Report"
        value={181}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="7"
        primaryText="Design"
        value={316}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="8"
        primaryText="Generic Document"
        value={202}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="9"
        primaryText="Image"
        value={238}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="10"
        primaryText="Journal Article"
        value={179}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="11"
        primaryText="Newspaper Article"
        value={191}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="12"
        primaryText="Patent"
        value={185}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="13"
        primaryText="Preprint"
        value={204}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="14"
        primaryText="Research Report"
        value={275}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="15"
        primaryText="Seminar Paper"
        value={189}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="16"
        primaryText="Thesis"
        value={187}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="17"
        primaryText="Video Document"
        value={310}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="18"
        primaryText="Working Paper"
        value={183}
      />
    </Field>
  </StandardCard>
  <GenericDocumentForm
    formValues={
      Immutable.Map {
        "rek_display_type": 202,
      }
    }
    submitting={false}
  />
  <StandardCard
    className=""
    title="Upload files"
  >
    <Field
      component={[Function]}
      disabled={false}
      name="files"
      requireOpenAccessStatus={true}
      validate={
        Array [
          [Function],
        ]
      }
    />
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Abandon and search again"
        onTouchTap={[MockFunction]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Submit for approval"
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</form>
`;

exports[`Component PublicationForm should render component with JournalArticleForm 1`] = `
<form
  onSubmit={[Function]}
>
  <NavigationDialogBox
    txt={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to abandon workflow?",
        "confirmationTitle": "Abandon workflow",
      }
    }
  />
  <StandardCard
    className=""
    title="Publication type"
  >
    <Field
      className="requiredField"
      component={[Function]}
      disabled={false}
      floatingLabelFixed={true}
      floatingLabelText="Publication type"
      hintText="Select a publication type from the dropdown list"
      name="rek_display_type"
    >
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_0"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_1"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_2"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_3"
        primaryText="Journal Article"
        value={179}
      />
      <Divider
        inset={false}
        key="div_0"
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="0"
        primaryText="Audio Document"
        value={263}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="1"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="2"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="3"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="4"
        primaryText="Conference Proceedings"
        value={197}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="5"
        primaryText="Creative Work"
        value={313}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="6"
        primaryText="Department Technical Report"
        value={181}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="7"
        primaryText="Design"
        value={316}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="8"
        primaryText="Generic Document"
        value={202}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="9"
        primaryText="Image"
        value={238}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="10"
        primaryText="Journal Article"
        value={179}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="11"
        primaryText="Newspaper Article"
        value={191}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="12"
        primaryText="Patent"
        value={185}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="13"
        primaryText="Preprint"
        value={204}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="14"
        primaryText="Research Report"
        value={275}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="15"
        primaryText="Seminar Paper"
        value={189}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="16"
        primaryText="Thesis"
        value={187}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="17"
        primaryText="Video Document"
        value={310}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="18"
        primaryText="Working Paper"
        value={183}
      />
    </Field>
  </StandardCard>
  <JournalArticleForm
    formValues={
      Immutable.Map {
        "rek_display_type": 179,
      }
    }
    submitting={false}
    subtypeVocabId={453573}
  />
  <StandardCard
    className=""
    title="Upload files"
  >
    <Field
      component={[Function]}
      disabled={false}
      name="files"
      requireOpenAccessStatus={true}
      validate={
        Array [
          [Function],
        ]
      }
    />
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Abandon and search again"
        onTouchTap={[MockFunction]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Submit for approval"
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</form>
`;

exports[`Component PublicationForm should render component with ResearchReportForm 1`] = `
<form
  onSubmit={[Function]}
>
  <NavigationDialogBox
    txt={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to abandon workflow?",
        "confirmationTitle": "Abandon workflow",
      }
    }
  />
  <StandardCard
    className=""
    title="Publication type"
  >
    <Field
      className="requiredField"
      component={[Function]}
      disabled={false}
      floatingLabelFixed={true}
      floatingLabelText="Publication type"
      hintText="Select a publication type from the dropdown list"
      name="rek_display_type"
    >
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_0"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_1"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_2"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_3"
        primaryText="Journal Article"
        value={179}
      />
      <Divider
        inset={false}
        key="div_0"
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="0"
        primaryText="Audio Document"
        value={263}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="1"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="2"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="3"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="4"
        primaryText="Conference Proceedings"
        value={197}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="5"
        primaryText="Creative Work"
        value={313}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="6"
        primaryText="Department Technical Report"
        value={181}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="7"
        primaryText="Design"
        value={316}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="8"
        primaryText="Generic Document"
        value={202}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="9"
        primaryText="Image"
        value={238}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="10"
        primaryText="Journal Article"
        value={179}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="11"
        primaryText="Newspaper Article"
        value={191}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="12"
        primaryText="Patent"
        value={185}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="13"
        primaryText="Preprint"
        value={204}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="14"
        primaryText="Research Report"
        value={275}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="15"
        primaryText="Seminar Paper"
        value={189}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="16"
        primaryText="Thesis"
        value={187}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="17"
        primaryText="Video Document"
        value={310}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="18"
        primaryText="Working Paper"
        value={183}
      />
    </Field>
  </StandardCard>
  <ResearchReportForm
    formValues={
      Immutable.Map {
        "rek_display_type": 275,
      }
    }
    submitting={false}
  />
  <StandardCard
    className=""
    title="Upload files"
  >
    <Field
      component={[Function]}
      disabled={false}
      name="files"
      requireOpenAccessStatus={true}
      validate={
        Array [
          [Function],
        ]
      }
    />
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Abandon and search again"
        onTouchTap={[MockFunction]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Submit for approval"
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</form>
`;

exports[`Component PublicationForm should render component with all fields disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <NavigationDialogBox
    txt={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to abandon workflow?",
        "confirmationTitle": "Abandon workflow",
      }
    }
  />
  <StandardCard
    className=""
    title="Publication type"
  >
    <Field
      className="requiredField"
      component={[Function]}
      disabled={true}
      floatingLabelFixed={true}
      floatingLabelText="Publication type"
      hintText="Select a publication type from the dropdown list"
      name="rek_display_type"
    >
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_0"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_1"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_2"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="fav_3"
        primaryText="Journal Article"
        value={179}
      />
      <Divider
        inset={false}
        key="div_0"
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="0"
        primaryText="Audio Document"
        value={263}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="1"
        primaryText="Book"
        value={174}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="2"
        primaryText="Book Chapter"
        value={177}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="3"
        primaryText="Conference Paper"
        value={130}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="4"
        primaryText="Conference Proceedings"
        value={197}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="5"
        primaryText="Creative Work"
        value={313}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="6"
        primaryText="Department Technical Report"
        value={181}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="7"
        primaryText="Design"
        value={316}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="8"
        primaryText="Generic Document"
        value={202}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="9"
        primaryText="Image"
        value={238}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="10"
        primaryText="Journal Article"
        value={179}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="11"
        primaryText="Newspaper Article"
        value={191}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="12"
        primaryText="Patent"
        value={185}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="13"
        primaryText="Preprint"
        value={204}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="14"
        primaryText="Research Report"
        value={275}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="15"
        primaryText="Seminar Paper"
        value={189}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="16"
        primaryText="Thesis"
        value={187}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="17"
        primaryText="Video Document"
        value={310}
      />
      <MenuItem
        checked={false}
        desktop={false}
        disabled={false}
        insetChildren={false}
        key="18"
        primaryText="Working Paper"
        value={183}
      />
    </Field>
  </StandardCard>
  <Alert
    allowDismiss={false}
    message="Creating new publication is in progress."
    showLoader={true}
    title="Saving"
    type="info_outline"
  />
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={true}
        fullWidth={true}
        label="Abandon and search again"
        onTouchTap={[MockFunction]}
        primary={false}
        secondary={false}
      />
    </div>
  </div>
</form>
`;
